; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/au0828/extr_au0828-dvb.c_au0828_stop_transport.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/au0828/extr_au0828-dvb.c_au0828_stop_transport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.au0828_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.au0828_dev*, i32)* @au0828_stop_transport to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @au0828_stop_transport(%struct.au0828_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.au0828_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.au0828_dev* %0, %struct.au0828_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load %struct.au0828_dev*, %struct.au0828_dev** %3, align 8
  %9 = call i32 @au0828_write(%struct.au0828_dev* %8, i32 1544, i32 0)
  %10 = load %struct.au0828_dev*, %struct.au0828_dev** %3, align 8
  %11 = call i32 @au0828_write(%struct.au0828_dev* %10, i32 1545, i32 0)
  %12 = load %struct.au0828_dev*, %struct.au0828_dev** %3, align 8
  %13 = call i32 @au0828_write(%struct.au0828_dev* %12, i32 1546, i32 0)
  br label %14

14:                                               ; preds = %7, %2
  %15 = load %struct.au0828_dev*, %struct.au0828_dev** %3, align 8
  %16 = call i32 @au0828_write(%struct.au0828_dev* %15, i32 1547, i32 0)
  ret void
}

declare dso_local i32 @au0828_write(%struct.au0828_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
